--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "kmdr-ast",
   "version": "1.0.4",
   "description": "Traverse the AST of an explanation by kmdr",
-  "main": "./src/index.js",
+  "main": "dist/src/index.js",
   "repository": "git@github.com:ediardo/kmdr-ast.git",
   "author": "Eddie Ramirez <djedi.r@gmail.com>",
   "license": "MIT",
