New yarn task for publishing pkg
Build and publish a directory using np

Updated dependencies

--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "typescript": "^3.6.4"
   },
   "scripts": {
-    "build": "tsc"
+    "build": "tsc",
+    "publish": "yarn run build && np --no-tests"
   }
 }
