--- a/package.json
+++ b/package.json
@@ -6,16 +6,15 @@
   "repository": "git@github.com:ediardo/kmdr-ast.git",
   "author": "Eddie Ramirez <djedi.r@gmail.com>",
   "license": "MIT",
+  "dependencies": {
+    "kmdr-parser": "^2.2.0"
+  },
   "devDependencies": {
     "@types/jest": "^24.9.1",
     "@types/node": "^12.12.26",
-    "@types/react": "^16.9.19",
-    "@types/react-test-renderer": "^16.9.2",
+    "create-html-element": "^3.0.0",
     "jest": "^24.9.0",
-    "kmdr-parser": "^2.2.0",
     "prettier": "^1.19.1",
-    "react": "^16.12.0",
-    "react-test-renderer": "^16.12.0",
     "ts-jest": "^24.3.0",
     "tslint": "^5.20.1",
     "tslint-config-prettier": "^1.18.0",
@@ -35,7 +34,7 @@
       "node_modules/"
     ],
     "testEnvironment": "node",
-    "testRegex": "tests/.*\\.(ts|tsx|js)$",
+    "testRegex": "tests/.*\\.test.(ts|tsx|js)$",
     "transform": {
       "\\.(ts|tsx)$": "ts-jest"
     },
