--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "kmdr-ast",
-  "version": "2.0.3",
+  "version": "3.0.0-0",
   "description": "Traverse the AST of an explanation by kmdr",
   "main": "dist/index.js",
   "repository": "git@github.com:ediardo/kmdr-ast.git",
