--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "author": "Eddie Ramirez <djedi.r@gmail.com>",
   "license": "MIT",
   "dependencies": {
+    "@types/react": "^16.9.34",
     "kmdr-parser": "^2.3.0"
   },
   "devDependencies": {
