--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "devDependencies": {
     "@types/jest": "^24.9.1",
     "@types/node": "^12.20.5",
+    "ansi-colors": "^4.1.1",
     "create-html-element": "^3.0.0",
     "jest": "^24.9.0",
     "prettier": "^1.19.1",
